[gd_scene load_steps=10 format=2]

[ext_resource path="res://Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Point.gd" type="Script" id=4]
[ext_resource path="res://AiPoint.gd" type="Script" id=5]
[ext_resource path="res://AiPaddle.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.7898, 333.39 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 511.227, 14.6568 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Ball = ExtResource( 2 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 123.794, 295.201 )

[node name="AiPaddle" parent="." instance=ExtResource( 6 )]
position = Vector2( 877.799, 294.986 )

[node name="Point" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="PlayerSide" type="CollisionShape2D" parent="Point"]
position = Vector2( -17.0728, 292.616 )
shape = SubResource( 1 )

[node name="AiSide" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="AIside" type="CollisionShape2D" parent="AiSide"]
position = Vector2( 1042.66, 296.493 )
shape = SubResource( 1 )

[node name="Walls" type="StaticBody2D" parent="."]
physics_material_override = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2( 512, -14.559 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2( 512, 615.126 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Point" to="Point" method="_on_Point_body_entered"]
[connection signal="hit" from="Point" to="." method="_on_Point_hit"]
[connection signal="body_entered" from="AiSide" to="AiSide" method="_on_AiPoint_body_entered"]
[connection signal="player_hit" from="AiSide" to="." method="_on_AiSide_player_hit"]
